--- a/HomeWork/Project/css/main.css
+++ b/HomeWork/Project/css/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
   }
   
   ol, ul {
@@ -12,22 +13,8 @@
     text-decoration: none;
   }
 
-  .container {
-    max-width: 1150px;
-    margin: 0 auto;
-  }
+#display-box{padding: 100px;}
 
-  .wrap {
-    display: flex;
-    justify-content: center;
-    padding-top: 250px;
-  }
-  .position {
-    border: 1px solid grey;
-    padding: 10px 50px;
-  }
-  .btn{border-radius: 5px;
-border-color: grey;
-background-color: rgb(231, 231, 231);
-padding: 5px 10px;
+.btn{border-radius: 12px; 
+
 }
