--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,9 @@ padding: 10px 6px;
 border-bottom-left-radius: 10px;
 border-bottom-right-radius: 10px;
 }
+main{padding-top: 24px;
+padding: 10px 30px;
+}
 input{padding: 0 20px;}
 
 .red{color: red;}
@@ -33,4 +36,58 @@ cursor: pointer;
 display: flex;
 justify-content: center;
 
+}
+
+.galleryWrap{display: flex;
+flex-wrap: wrap;
+padding-right: 10px;
+justify-content: center;
+padding-bottom: 10px;
+}
+
+
+.Car{width: 300px; 
+height: 260px;
+border-radius: 12px;
+margin-right: 170px;
+margin-top: 30px;
+cursor: pointer;
+}
+.Car:hover{scale: 1.1;
+transition: 0.5s;
+transform: rotate(10deg);
+}
+
+.pop-up{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, .8);
+display: none;
+}
+
+.pop-up img{position: absolute;
+top: 15%;
+left: 15%;
+transform: translate(50% 50%);
+border-radius: 12px;
+width: 1200px;
+height: 700px;
+}
+
+.pop-up span{
+    position: fixed;
+    height: 10px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: black;
+    color: aliceblue;
+    font-size: 50px;
+    font-weight: 900;
+    cursor: pointer;
+    text-align: center;
+    line-height: 40px;
 }
