--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,10 @@
 text-decoration: none;
 margin: 0;
 padding: 0;
-
+text-align: center;
+color: rgb(209, 209, 2);
 }
-
+body{background-color: rgb(85, 84, 84);}
 .headerWrap{display: flex;
 background-color: grey;
 padding: 10px 10px;
@@ -16,4 +17,142 @@ border-bottom-right-radius: 6px;
 width: 50px;
 height: 50px;
 }
-.headerWrap h3{}
+
+main{text-align: center;
+padding: 10px 0;
+}
+main h2{padding: 10px 0;}
+.slider-sect{
+
+
+
+}
+
+.slider{width: 1200px;
+height: 700px;
+border-radius: 10px;
+overflow: hidden;
+margin: 0 17%;
+}
+.slides{width: 500%;
+height: 500px;
+display: flex;
+
+
+}
+
+.slides input{display: none;}
+
+.slide{width: 20%;
+transition: 2s;
+}
+
+.slide img{
+width: 1200px;
+height: 700px;
+
+}
+
+
+
+.manual-nav{position: absolute;
+width: 800px;
+margin-top:150px;
+margin-left: 215px;
+display:flex;
+justify-content: center;
+
+}
+
+
+
+.manual-btn{
+border: 2px solid rgb(209, 209, 2);
+padding: 5px;
+border-radius: 10px;
+cursor: pointer;
+transition: 1s;
+padding-right: 10px;
+margin-right: 3px;
+
+
+
+
+
+
+}
+
+.manual-btn:hover{background-color: rgb(209, 209, 2);
+scale: 1.2;
+
+}
+
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -20%;
+}
+#radio3:checked ~ .first{
+    margin-left: -40%;
+}
+#radio4:checked ~ .first{
+    margin-left: -60%;
+}
+
+
+
+
+
+.auto-nav{position: absolute;
+display: flex;
+width: 800px;
+justify-content: center;
+margin-top:150px;
+margin-left: 215px;
+
+
+}
+
+
+
+
+.auto-nav div{border: 2px solid rgb(209, 209, 2);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+    padding-right: 10px;
+    margin-right: 3px;}
+
+
+
+
+
+    #radio1:checked ~ .auto-nav .auto-btn1{background-color: rgb(209, 209, 2);}
+
+    #radio2:checked ~ .auto-nav .auto-btn2{background-color: rgb(209, 209, 2);}
+
+    #radio3:checked ~ .auto-nav .auto-btn3{background-color: rgb(209, 209, 2);}
+
+    #radio4:checked ~ .auto-nav .auto-btn4{background-color: rgb(209, 209, 2);}
+
+
+
+
+
+    .slideShowStart{background-color: black;
+    padding: 10px;
+    border-radius: 13px;
+    border: 1px solid yellow;
+    }
+
+    .SlideShowBtnSect {padding: 10px;}
+
+    .slideShowStart:hover{color: black;
+    background-color: yellow;
+    border: 1px solid black;
+    transition: 0.5s;
+    }
