--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,23 @@ margin: 0;
 padding: 0;
 
 }
-body{background-color: #e5e5e5;}
+body{background-color: #e5e5e5;  }
 
-header{background-color: #fca311; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; padding: 10px 0;}
+
+.container{ display: flex;
+    flex-direction: column;
+    align-items: center; 
+    flex-wrap: wrap;
+     }
+
+
+
+
+header{background-color: #fca311; border-bottom-right-radius: 12px; border-bottom-left-radius: 12px; padding: 10px 750px;}
 header h1{color: #14213d;}
 .container-header{display: flex; flex-direction: row;}
 
-main{background-color: #fca311; color: #14213d; margin-top: 15px; border-radius: 12px; padding: 10px 0;}
+main{background-color: #fca311; color: #14213d; margin-top: 15px; border-radius: 12px; padding: 50px 450px; max-width: 1675px;}
 
 #product-container{display: flex; flex-direction: row; justify-content: center; text-align: center; }
 
