--- a/styles/style.css
+++ b/styles/style.css
@@ -58,3 +58,6 @@ border-radius: 12px;
     }
 
     .CartBtnAdd{background-color: #fca311; border-radius: 12px; border: 0; padding: 10px;}
+    .CartBtnAdd:hover{background-color: #14213d; color: #e5e5e5; transition: 0.5s;}
+
+    #cart-window{position: absolute; padding: 10px; background-color: #e5e5e5;  top: 50%;}
