--- a/styles/style.css
+++ b/styles/style.css
@@ -76,3 +76,6 @@ border-radius: 12px;
     .wrap-login input{border-radius: 12px; border: 0px; padding: 3px;}
     .wrap-closer{display: flex; flex-direction: row-reverse; justify-content: space-between;}
     #cart{display: none;}
+    #cart:hover{scale: 1.1;}
+    #logout{border: 0px; background-color: transparent; cursor: pointer; display: none;}
+    #logout:hover{scale: 1.1;}
